--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ async-trait = "0.1.80"
 aws-config = { version = "1.5.3", features = ["behavior-version-latest"] }
 aws-sdk-dynamodb = { version = "1.36.0", features = ["behavior-version-latest"] }
 chrono = { version = "0.4.38", features = ["serde"] }
+dotenv = "0.15.0"
 rocket = { version = "0.5.0-rc.2", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
