--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ aws-sdk-dynamodb = { version = "1.36.0", features = ["behavior-version-latest"] 
 chrono = { version = "0.4.38", features = ["serde"] }
 dotenv = "0.15.0"
 humantime = "2.1.0"
+lambda-web = { version = "0.2.1", features = ["rocket05"] }
 rocket = { version = "0.5.0-rc.2", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
