--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ chrono = { version = "0.4.38", features = ["serde"] }
 dotenv = "0.15.0"
 humantime = "2.1.0"
 lambda-web = { version = "0.2.1", features = ["rocket05"] }
+rand = "0.8.5"
 rocket = { version = "0.5.0-rc.2", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
