--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,6 @@
-[package]
-name = "sitt_api"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = [
+    "api",
+    "cli"
+]
 
-[dependencies]
-async-trait = "0.1.80"
-aws-config = { version = "1.5.3", features = ["behavior-version-latest"] }
-aws-sdk-dynamodb = { version = "1.36.0", features = ["behavior-version-latest"] }
-chrono = { version = "0.4.38", features = ["serde"] }
-dotenv = "0.15.0"
-humantime = "2.1.0"
-lambda-web = { version = "0.2.1", features = ["rocket05"] }
-rand = "0.8.5"
-rocket = { version = "0.5.0-rc.2", features = ["json"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-thiserror = "=1.0.24"
-tokio = { version = "1", features = ["full"] }
-uuid = { version = "1.9.1", features = ["v4"] }
-validator = { version = "0.18.1", features = ["derive"] }
