--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
 [workspace]
-members = [
-    "api",
-    "cli"
-]
+members = ["api", "cli"]
 
+[workspace.dependencies]
+sitt-api = { path = "api" }
+async-trait = "0.1.80"
+chrono = "0.4.38"
+humantime = "2.1.0"
+rand = "0.8.5"
+serde = "1.0"
+serde_json = "1.0"
+thiserror = "1.0.63"
