--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -20,3 +20,5 @@ url = "2.5.2"
 thiserror = { workspace = true }
 toml = "0.8.19"
 serde.workspace = true
+reqwest = { version = "0.12.5", features = ["blocking", "json"] }
+serde_json.workspace = true
