--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: Build Binaries
+name: Build CLI Binaries
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-cli:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -37,13 +37,15 @@ jobs:
           override: true
           target: ${{ matrix.target }}
 
-      - name: Build
-        run: cargo build --release --target ${{ matrix.target }} --manifest-path cli/Cargo.toml
+      - name: Build CLI Binary
+        run: |
+          cd cli
+          cargo build --release --target ${{ matrix.target }}
 
       - name: Copy Binary to bin Directory
         run: |
           mkdir -p bin
-          cp target/${{ matrix.target }}/release/sitt${{ matrix.extension }} bin/${{ matrix.binary_name }}
+          cp cli/target/${{ matrix.target }}/release/sitt${{ matrix.extension }} bin/${{ matrix.binary_name }}
 
       - name: Upload Binaries as Artifacts
         uses: actions/upload-artifact@v3
