--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,15 +15,15 @@ jobs:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            binary_name: sitt-linux
+            platform: linux
             extension: ''
           - os: macos-latest
             target: x86_64-apple-darwin
-            binary_name: sitt-macos
+            platform: macos
             extension: ''
           - os: windows-latest
             target: x86_64-pc-windows-msvc
-            binary_name: sitt-windows.exe
+            platform: windows
             extension: '.exe'
 
     steps:
@@ -43,11 +43,11 @@ jobs:
 
       - name: Copy Binary to bin Directory
         run: |
-          mkdir -p bin
-          cp target/${{ matrix.target }}/release/sitt${{ matrix.extension }} bin/${{ matrix.binary_name }}
+          mkdir -p bin/${{ matrix.platform }}
+          cp target/${{ matrix.target }}/release/sitt${{ matrix.extension }} bin/${{ matrix.platform }}/sitt${{ matrix.extension }}
 
       - name: Upload Binaries as Artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ matrix.binary_name }}
-          path: bin/${{ matrix.binary_name }}
+          name: sitt-${{ matrix.platform }}
+          path: bin/${{ matrix.platform }}/sitt${{ matrix.extension }}
