--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,8 +3,8 @@ name: Build and Release sitt CLI
 on:
   push:
     tags:
-      - 'v*.*.*'  # Triggers when you push a tag like v1.0.0
-  workflow_dispatch:  # Allows manual triggering from the GitHub Actions tab
+      - 'v*.*.*'
+  workflow_dispatch:
 
 jobs:
   build:
@@ -16,23 +16,17 @@ jobs:
             target: x86_64-unknown-linux-gnu
             platform: linux
             extension: ''
-            archive_extension: 'tar.gz'
-            pack_command: 'tar -czf'
-            content_type: 'application/gzip'
+            content_type: 'application/octet-stream'
           - os: macos-latest
             target: x86_64-apple-darwin
             platform: macos
             extension: ''
-            archive_extension: 'tar.gz'
-            pack_command: 'tar -czf'
-            content_type: 'application/gzip'
+            content_type: 'application/octet-stream'
           - os: windows-latest
             target: x86_64-pc-windows-msvc
             platform: windows
             extension: '.exe'
-            archive_extension: 'zip'
-            pack_command: 'Compress-Archive -Path'
-            content_type: 'application/zip'
+            content_type: 'application/octet-stream'
 
     steps:
       - name: Checkout Repository
@@ -51,24 +45,14 @@ jobs:
 
       - name: Copy Binary to bin Directory
         run: |
-          mkdir -p bin/${{ matrix.platform }}
-          cp target/${{ matrix.target }}/release/sitt${{ matrix.extension }} bin/${{ matrix.platform }}/sitt${{ matrix.extension }}
-
-      - name: Package Binary
-        run: |
-          cd bin
-          if [ "${{ matrix.platform }}" = "windows" ]; then
-            ${{ matrix.pack_command }} "../sitt-${{ matrix.platform }}.${{ matrix.archive_extension }}" "${{ matrix.platform }}"
-          else
-            ${{ matrix.pack_command }} "../sitt-${{ matrix.platform }}.${{ matrix.archive_extension }}" "${{ matrix.platform }}"
-          fi
-        shell: bash
+          mkdir -p bin
+          cp target/${{ matrix.target }}/release/sitt${{ matrix.extension }} bin/sitt-${{ matrix.platform }}${{ matrix.extension }}
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
           name: sitt-${{ matrix.platform }}
-          path: bin/sitt-${{ matrix.platform }}.${{ matrix.archive_extension }}
+          path: bin/sitt-${{ matrix.platform }}${{ matrix.extension }}
 
   release:
     needs: build
@@ -96,9 +80,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: bin/sitt-linux.tar.gz
-          asset_name: sitt-linux.tar.gz
-          asset_content_type: application/gzip
+          asset_path: bin/sitt-linux
+          asset_name: sitt-linux
+          asset_content_type: application/octet-stream
 
       - name: Upload macOS Binary to Release
         uses: actions/upload-release-asset@v1
@@ -106,9 +90,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: bin/sitt-macos.tar.gz
-          asset_name: sitt-macos.tar.gz
-          asset_content_type: application/gzip
+          asset_path: bin/sitt-macos
+          asset_name: sitt-macos
+          asset_content_type: application/octet-stream
 
       - name: Upload Windows Binary to Release
         uses: actions/upload-release-asset@v1
@@ -116,6 +100,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: bin/sitt-windows.zip
-          asset_name: sitt-windows.zip
-          asset_content_type: application/zip
+          asset_path: bin/sitt-windows.exe
+          asset_name: sitt-windows.exe
+          asset_content_type: application/octet-stream
