--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,8 +3,11 @@ name: Build and Release sitt CLI
 on:
   push:
     tags:
-      - 'v*.*.*'
-  workflow_dispatch:
+      - 'v*.*.*'  # Triggers when you push a tag like v1.0.0
+  workflow_dispatch:  # Allows manual triggering from the GitHub Actions tab
+
+permissions:
+  contents: write  # Grant write permission to the contents scope
 
 jobs:
   build:
@@ -12,21 +15,21 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: ubuntu-latest
-            target: x86_64-unknown-linux-gnu
-            platform: linux
-            extension: ''
-            content_type: 'application/octet-stream'
+          # - os: ubuntu-latest
+          #   target: x86_64-unknown-linux-gnu
+          #   platform: linux
+          #   extension: ''
+          #   content_type: 'application/octet-stream'
           - os: macos-latest
             target: x86_64-apple-darwin
             platform: macos
             extension: ''
             content_type: 'application/octet-stream'
-          - os: windows-latest
-            target: x86_64-pc-windows-msvc
-            platform: windows
-            extension: '.exe'
-            content_type: 'application/octet-stream'
+          # - os: windows-latest
+          #   target: x86_64-pc-windows-msvc
+          #   platform: windows
+          #   extension: '.exe'
+          #   content_type: 'application/octet-stream'
 
     steps:
       - name: Checkout Repository
@@ -66,40 +69,32 @@ jobs:
       - name: Create GitHub Release
         id: create_release
         uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
 
-      - name: Upload Linux Binary to Release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: bin/sitt-linux
-          asset_name: sitt-linux
-          asset_content_type: application/octet-stream
+      # - name: Upload Linux Binary to Release
+      #   uses: actions/upload-release-asset@v1
+      #   with:
+      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
+      #     asset_path: bin/sitt-linux
+      #     asset_name: sitt-linux
+      #     asset_content_type: application/octet-stream
 
       - name: Upload macOS Binary to Release
         uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: bin/sitt-macos
           asset_name: sitt-macos
           asset_content_type: application/octet-stream
 
-      - name: Upload Windows Binary to Release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: bin/sitt-windows.exe
-          asset_name: sitt-windows.exe
-          asset_content_type: application/octet-stream
+      # - name: Upload Windows Binary to Release
+      #   uses: actions/upload-release-asset@v1
+      #   with:
+      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
+      #     asset_path: bin/sitt-windows.exe
+      #     asset_name: sitt-windows.exe
+      #     asset_content_type: application/octet-stream
